# calsync

./: .gitignore  CLAUDE.md  Makefile  README.md  SYSTEMD_SETUP.md  calendar_api.py  calsync-failure@.service  calsync.py  calsync.service  calsync.timer  config.yaml.example  mktimer.py  pyproject.toml  requirements.txt  state_db.py  sync_engine.py
.github/: dependabot.yml
.github/workflows/: lint.yml  trufflehog.yaml
